--- a/Media Session API/manifest.json
+++ b/Media Session API/manifest.json
@@ -1,7 +1,7 @@
 {
-    "short_name": "Audio API",
-    "name": "PWA Audio",
-    "description": "Audio API",
+    "short_name": "MediaSession",
+    "name": "Media Session API",
+    "description": "Media Session API Sample for PWAExperts.io",
     "background_color": "#FFFFFF",
     "theme_color": "#FFFFFF",
     "orientation": "portrait",
@@ -9,40 +9,34 @@
     "display": "standalone",
     "icons": [
             {
-            "src": "icons/ru-512.png",
+            "src": "icons/pwa-64.png",
             "type": "image/png",
-            "sizes": "512x512",
+            "sizes": "64x64",
             "purpose": "maskable"
             },
             {
-            "src": "icons/ru-192.png",
-            "type": "image/png",
-            "sizes": "192x192",
-            "purpose": "maskable"
-            },
-            {
-            "src": "icons/ru-144.png",
-            "type": "image/png",
-            "sizes": "144x144",
-            "purpose": "maskable"
-            },
-            {
-            "src": "icons/ru-128.png",
-            "type": "image/png",
-            "sizes": "128x128",
-            "purpose": "maskable"
-            },
-            {
-            "src": "icons/ru-96.png",
+            "src": "icons/pwa-96.png",
             "type": "image/png",
             "sizes": "96x96",
             "purpose": "maskable"
             },
             {
-            "src": "icons/ru-64.png",
+            "src": "icons/pwa-128.png",
             "type": "image/png",
-            "sizes": "64x64",
+            "sizes": "128x128",
             "purpose": "maskable"
-            }            
+            },
+            {
+            "src": "icons/pwa-144.png",
+            "type": "image/png",
+            "sizes": "144x144",
+            "purpose": "maskable"
+            },
+            {
+            "src": "icons/pwa-192.png",
+            "type": "image/png",
+            "sizes": "192x192",
+            "purpose": "maskable"
+            }
     ]
 }
